--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django-environ = "^0.9.0"
 psycopg2 = "^2.9.3"
 celery = "^5.2.7"
 redis = "^4.3.4"
+pytz = "^2022.2.1"
 
 [tool.poetry.dev-dependencies]
 
