--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ psycopg2 = "^2.9.3"
 celery = "^5.2.7"
 redis = "^4.3.4"
 pytz = "^2022.2.1"
+djangorestframework = "^3.13.1"
 
 [tool.poetry.dev-dependencies]
 
