--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ celery = "^5.2.7"
 redis = "^4.3.4"
 pytz = "^2022.2.1"
 djangorestframework = "^3.13.1"
+drf-yasg = "^1.21.3"
 
 [tool.poetry.dev-dependencies]
 
