--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ redis = "^4.3.4"
 pytz = "^2022.2.1"
 djangorestframework = "^3.13.1"
 drf-yasg = "^1.21.3"
+drf-writable-nested = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 
